k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
spec:
  rules:
  - http:
      paths:
      - path: /service-A
        pathType: Prefix
        backend:
          service:
            name: service-a
            port:
              number: 80
      - path: /service-B
        pathType: Prefix
        backend:
          service:
            name: service-b
            port:
              number: 80
